--- a/DiceRoller/app/src/main/res/layout/activity_main.xml
+++ b/DiceRoller/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,24 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
+    <ImageView
+        android:id="@+id/iv_dice"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:scaleType="fitCenter"
+        app:layout_constraintBottom_toTopOf="@id/btn_roll"
+        app:layout_constraintEnd_toEndOf="@id/btn_roll"
+        app:layout_constraintStart_toStartOf="@id/btn_roll"
+        android:contentDescription="@string/dice"/>
+
+    <Button
+        android:id="@+id/btn_roll"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
+        android:text="@string/roll"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
