--- a/android/ReplyClone/app/src/main/res/layout/activity_main.xml
+++ b/android/ReplyClone/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:id="@+id/coordinator_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layoutFullScreen="@{true}"
+        tools:context="com.rezac.replyclone.ui.MainActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/fragmentContainerView"
+            android:name="androidx.navigation.fragment.NavHostFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:defaultNavHost="true"
+            app:navGraph="@navigation/navigation_graph" />
+
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/bottom_nav_drawer"
+            android:name="com.rezac.replyclone.ui.nav.BottomNavDrawerFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+        <com.google.android.material.bottomappbar.BottomAppBar
+            android:id="@+id/bottom_app_bar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            app:fabAlignmentMode="center"
+            app:fabCradleMargin="@dimen/bottom_app_bar_fab_cradle_margin"
+            app:fabCradleRoundedCornerRadius="@dimen/bottom_app_bar_fab_cradle_corner_radius"
+            app:hideOnScroll="true">
+
+            <LinearLayout
+                android:id="@+id/bottom_app_bar_content_container"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/min_touch_target_size"
+                android:layout_marginVertical="@dimen/grid_0_5"
+                android:paddingHorizontal="@dimen/grid_0_5"
+                android:orientation="horizontal"
+                android:gravity="center_vertical"
+                android:foreground="@drawable/bottom_app_bar_title_foreground">
+
+
+                <ImageView
+                    android:id="@+id/bottom_app_bar_chevron"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:contentDescription="@string/bottom_app_bar_chevron_content_desc"
+                    android:layout_gravity="center_vertical"
+                    app:tint="?attr/colorOnPrimarySurface"
+                    app:srcCompat="@drawable/ic_arrow_drop_up" />
+
+                <ImageView
+                    android:id="@+id/bottom_app_bar_logo"
+                    android:layout_width="@dimen/bottom_app_bar_logo_size"
+                    android:layout_height="@dimen/bottom_app_bar_logo_size"
+                    android:layout_marginEnd="@dimen/grid_1"
+                    android:contentDescription="@string/bottom_app_bar_logo_content_desc"
+                    android:layout_gravity="center_vertical"
+                    app:srcCompat="@drawable/ic_reply_logo" />
+
+                <TextView
+                    android:id="@+id/bottom_app_bar_title"
+                    android:textAppearance="?attr/textAppearanceBody1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginHorizontal="@dimen/grid_1"
+                    android:text="@string/navigation_inbox"
+                    android:textColor="?attr/colorControlNormal"/>
+
+
+            </LinearLayout>
+
+        </com.google.android.material.bottomappbar.BottomAppBar>
+
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+</layout>
