--- a/android/TipTime/app/src/main/res/values/colors.xml
+++ b/android/TipTime/app/src/main/res/values/colors.xml
@@ -7,4 +7,12 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="blue">#1976D2</color>
+    <color name="blue_light">#63A4FF</color>
+    <color name="blue_dark">#004BA0</color>
+    
+    <color name="yellow">#DCE775</color>
+    <color name="yellow_light">#FFFFA6</color>
+    <color name="yellow_dark">#A8B545</color>
 </resources>
