--- a/android/Dogglers/app/src/main/res/layout/activity_main.xml
+++ b/android/Dogglers/app/src/main/res/layout/activity_main.xml
@@ -4,15 +4,39 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:padding="16dp"
+    tools:context=".ui.MainActivity">
 
-    <TextView
+    <Button
+        android:id="@+id/button_horizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
+        android:minWidth="@dimen/button_width"
+        android:text="@string/horizontal_list"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/button_vertical"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:minWidth="@dimen/button_width"
+        android:text="@string/vertical_list"
+        app:layout_constraintBottom_toTopOf="@id/button_horizontal"
+        app:layout_constraintEnd_toEndOf="@id/button_horizontal"
+        app:layout_constraintStart_toStartOf="@id/button_horizontal" />
+
+
+    <Button
+        android:id="@+id/button_grid"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:minWidth="@dimen/button_width"
+        android:text="@string/grid_list"
+        app:layout_constraintEnd_toEndOf="@id/button_horizontal"
+        app:layout_constraintStart_toStartOf="@id/button_horizontal"
+        app:layout_constraintTop_toBottomOf="@id/button_horizontal" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
