finshed-migrate-navigation-components🙈

--- a/android/Words/app/src/main/res/layout/fragment_letter_list.xml
+++ b/android/Words/app/src/main/res/layout/fragment_letter_list.xml
@@ -4,18 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.DetailActivity">
+    tools:context=".ui.fragment.LetterListFragment">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_words"
+        android:id="@+id/recycler_letter"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         android:clipToPadding="false"
         android:padding="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:listitem="@layout/item_view"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
