--- a/android/Cupcake/app/src/main/res/layout/fragment_pickup.xml
+++ b/android/Cupcake/app/src/main/res/layout/fragment_pickup.xml
@@ -90,13 +90,24 @@
                 android:id="@+id/next_button"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/side_margin"
                 android:layout_marginTop="@dimen/side_margin"
-                android:text="@string/next"
                 android:onClick="@{() -> pickupFragment.goToNextScreen()}"
+                android:text="@string/next"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintStart_toEndOf="@id/cancel_button"
                 app:layout_constraintTop_toBottomOf="@id/subtotal" />
 
+            <Button
+                android:id="@+id/cancel_button"
+                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="@string/cancel"
+                android:onClick="@{() -> pickupFragment.cancelOrder()}"
+                app:layout_constraintBaseline_toBaselineOf="@id/next_button"
+                app:layout_constraintEnd_toStartOf="@id/next_button"
+                app:layout_constraintStart_toStartOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </ScrollView>
