--- a/android/Cupcake/app/src/main/res/layout/fragment_summary.xml
+++ b/android/Cupcake/app/src/main/res/layout/fragment_summary.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="viewModel"
             type="com.rchyn.cupcake.model.OrderViewModel" />
@@ -141,13 +142,26 @@
                 android:id="@+id/send_button"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/side_margin"
-                android:text="@string/send"
+                android:layout_marginVertical="@dimen/side_margin"
+                android:layout_marginStart="@dimen/side_margin"
                 android:onClick="@{() -> summaryFragment.sendOrder()}"
-                app:layout_constraintBottom_toBottomOf="parent"
+                android:text="@string/send"
+                app:layout_constraintBottom_toTopOf="@id/cancel_button"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/total" />
+
+            <Button
+                android:id="@+id/cancel_button"
+                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="@string/cancel"
+                android:onClick="@{() -> summaryFragment.cancelOrder()}"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="@id/send_button"
+                app:layout_constraintStart_toStartOf="@id/send_button"
+                app:layout_constraintTop_toBottomOf="@id/send_button" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
